
message LogonReqMessage {
          required int64 acctID = 1;
          required string passwd = 2;
 }



