
message message1 {
    required int64 cmd = 1;
    required string content = 2;
 }



